--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             }
         }
         /*Media query*/
-        @media only screen and (min-width : 320px) {
+        @media only screen and (max-width : 780px) {
             .header{
                 background-color: #1f242d;
             }
@@ -246,7 +246,7 @@
                 display: flex;
             }
             .home{
-                margin-top: 300px;
+                margin-top: 30px;
                 text-align: center;
             }
             .home-img img{
